--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html> 
 <head>
-    <title>Эмир</title>
+    <title>win9</title>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="style.css">
 </head> 
@@ -10,7 +10,7 @@
     <div class="main">
         <div class="content">
             <img src="ferrari_PNG102807.png">
-            <h1>Жайчыбеков Эмир</h1>
+            <h1>Ferrari 458 italia,</h1>
         </div>
     </div>    
 </body>
